Simplify header styles After changing out typefaces there were issues with header styles not wrapping consistently, overflowing their containers, or lacking consistent rhythm and visual hierarchy. I've set base em sizes and attempted to reduce the number of styles required to make achieving consistent sizing throughout sections simpler.

--- a/static/less/base.less
+++ b/static/less/base.less
@@ -49,26 +49,10 @@ body.base-template {
   @media (min-width: @header-breakpoint) {
     background: url('../img/body.jpg') repeat-x 0 0;
   }
-  // based on "everything" comp, text content
-  // headers are relatively diminuitive.
-  // @see content-page.less. putting this here
-  // for reference to "regular" header sizes.
-  // could probably make a variable or something...
+
   .content-block {
-    h2 {
-      font-size: (@top-header-size * .6);
-    }
-
     h3 {
-      font-size: (@top-header-size * .5);
-    }
-
-    h4 {
-      font-size: (@top-header-size * .4);
-    }
-
-    h5 {
-      font-size: (@top-header-size * .3);
+      text-transform: uppercase;
     }
   }
 
