--- a/static/less/explorer.less
+++ b/static/less/explorer.less
@@ -12,6 +12,10 @@
   .mk-fluid-grid-container-md();
 }
 
+h1 {
+  .line-through-header;
+}
+
 #explorer {
   position: relative;
 }
