--- a/static/less/viewer.less
+++ b/static/less/viewer.less
@@ -291,11 +291,13 @@
         display: inline-block;
 
         h1 {
+          text-transform: initial;
+          letter-spacing: initial;
           background: none;
-          font-size: 24px;
           font-weight: 700;
           font-family: @roboto-condensed;
           margin-bottom: 4px;
+          line-height: 1;
         }
       }
 
